Fix dollhouse size on mobile.

--- a/css/style.concat.css
+++ b/css/style.concat.css
@@ -1060,7 +1060,7 @@ section {
 
 h3 {
   margin: 4rem 0 2rem 0;
-  color: #242e34;
+  color: #391f3a;
   font-size: 3rem;
   letter-spacing: .2rem;
 }
@@ -1271,6 +1271,9 @@ h3 {
   .image-box {
     width: 40%;
   }
+  .image-box-doll {
+    width: 80%;
+  }
 }
 
 /* = Mobile = */
@@ -1294,6 +1297,8 @@ h3 {
   }
 
   .image-box {
+    width: 80%;
+    height: auto;
     margin-bottom: 1rem;
   }
 
@@ -1305,11 +1310,6 @@ h3 {
     display: none;
   }
 
-  .image-box {
-    width: 80%;
-    height: auto;
-  }
-
   section {
     padding: 2rem 0 4rem 0;
   }
@@ -1317,7 +1317,6 @@ h3 {
   h3 {
     margin: 3rem 0 4rem 0;
     padding: 0 .5rem;
-    color: #242e34;
     font-size: 2.5rem;
   }
 
